2003/11/10 00:59 pcg

	* Glib.pm, GType.pm: implement == and eq for flags, the latter
        because some functions use eq as a generic comparison function.
        Also enable fallback for flags values, should work just fine.

2003/11/09 18:54 (-0500) muppetman

	writing documentation while mechagodzilla and titanosaur destroy
	tokyo... again.  http://us.imdb.com/title/tt0073373/

	* GClosure.xs, GLog.xs, GMainLoop.xs, GObject.xs, GParamSpec.xs,
	GSignal.xs GType.xs: added lots of apidoc pod.  All the packages in
	GMainLoop.xs go into Glib::MainLoop, and i reordered some of the
	xsubs in GObject.xs but changed no code.

	* GenPod.pm: pod updates, cleanup; use two =over paragraphs inside
	xsub docs to make the argument lists indent readably in the generated
	manpages.

	* Glib.pm: big updates to the SEE ALSO section.

	* Makefile.PL: even yet still more cleanup

	* ParseXSDoc.pm: pod cleanup

	* TODO: updated

2003/11/09 16:29 (-0500) rwmcfa1

	* ParseXSDoc.pm: added the method clean_out_empty_pods to prevent empty
	entries from the $data member of doc.pl. this prevents completely empty 
	pod files from being created.

	* GenPod.pm: if no methods are bound to a package then print a message
	saying it is likely that it doesn't exist in the version the module was
	compiled against. the message might could stand some improvement.

2003/11/08 12:10 pcg

	The "more evil things?" release.

        * GType.xs: Allow |, & and ^ as operators on flags, too.
	* GType.xs: GFlags are now represented as blessed IV's, which indeed
        gave a _substantial_ speed improvement at an unimportant place. But
        it also saves memory and code, and looks nice, so I just had to do it.
        * GLog.xs: simplify newSVGLogLevelFlags, as excluding single values
        should no longer be necessary.

2003/11/08 11:30 pcg

        * GType.xs: In addition to the change yesterday, make sure
        that gperl_convert_back_flags only ever returns distinct,